--- a/HW0/basic-python/02-exercises.ipynb
+++ b/HW0/basic-python/02-exercises.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# Excercises for Lecture 2\n",
     "\n",
-    "Your Name:   \n",
-    "Your UID:   \n",
-    "Your E-Mail:  "
+    "Your Name: Ian Wixom\n",
+    "\n",
+    "Your UID: u1201040\n",
+    "\n",
+    "Your E-Mail: iwixom@asuu.utah.edu"
    ]
   },
   {
@@ -19,14 +21,18 @@
     "Play around with data types and operations. Try the following things:\n",
     "\n",
     "1. Define two variables and assign an integer to the first and a float to the second. Define a new variable and assign the sum of the previous two variables. What's the data type of the third variable?\n",
+    " - float\n",
     "2. Reassign a variable with a different data type, e.g., take one of your numerical variables and assign a string to it. What's the new data type?\n",
+    " - string\n",
     "3. See what happens if you try to add a string to a string.\n",
-    "4. See what happens if you add a string to a float or an integer."
+    " - works\n",
+    "4. See what happens if you add a string to a float or an integer.\n",
+    " - TypeError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +40,20 @@
      "output_type": "stream",
      "text": [
       "3 4.2 7.2\n",
-      "three of hearts\n"
+      "Regarding Question 1: <class 'float'>\n",
+      "three of hearts\n",
+      "Regarding Question 2: <class 'str'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(x \u001b[38;5;241m+\u001b[39m aa) \u001b[38;5;66;03m# Question 3: stays a string\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRegarding Question 2:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mtype\u001b[39m(x))\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
    ],
@@ -43,9 +62,12 @@
     "y = 4.2\n",
     "z = x + y\n",
     "print(x, y, z)\n",
+    "print(\"Regarding Question 1:\", type(z))\n",
     "x = \"three\"\n",
     "aa = \" of hearts\"\n",
-    "print(x + aa)"
+    "print(x + aa) # Question 3: stays a string\n",
+    "print(\"Regarding Question 2:\", type(x))\n",
+    "print(3 + x) # Question 4: TypeError"
    ]
   },
   {
@@ -63,11 +85,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m+\u001b[39mb\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(addition(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m7\u001b[39m))\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def addition(a, b):\n",
+    "    return a+b\n",
+    "\n",
+    "print(addition(2, 7))\n",
+    "print(a)\n"
    ]
   },
   {
@@ -85,6 +130,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Ian Wixom, Major: Applied Math + International Studies, Age: 22 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Name: {}, Major: {}, Age: {} years old.\".format(\"Ian Wixom\", \"Applied Math + International Studies\", \"22\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,6 +158,32 @@
     " * and returns the result. \n",
     " \n",
     "Print the result of the function for three different sets of input variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "1.7341646\n",
+      "-333333.3333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 3\n",
+    "\n",
+    "def func(a, b):\n",
+    "    return (a * b)/c\n",
+    "\n",
+    "print(func(2, 6))\n",
+    "print(func(0.7432134, 7))\n",
+    "print(func(-1, 1000000))"
    ]
   },
   {
@@ -122,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
